# D2KDbot

./: .breakpoints  .gitignore  D2Tpage.txt  D2TpageT.txt  DiscName.txt  DiscNameT.txt  README.md  api_get.py  api_pull.py  backup.csv  bungie_name_get.py  getPlayerStats.py  lobby.txt  main.py  names.csv  new.txt  players.txt  pyproject.toml  se_get.py  snake_draft.py  statget.py  statgetlong.py  statgets.py  statgetse.py  stats.csv  statsT.csv  stattemp.csv  team_gen.py  team_sort.py
