[tool.poetry]
name = "repl_python3_D2KDbot"
version = "0.1.0"
description = ""
authors = ["paladyn12 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
